# jetbox

./: .dockerignore  .env  .gitignore  AGENT_ARCHITECTURE.md  AGENT_BEHAVIORS_REFACTORING_PLAN.md  AGENT_SIMPLIFICATION_PLAN.md  ARCHITECTURE.txt  BEHAVIORS_DOCUMENTATION.md  BEHAVIOR_DEFAULTS_REFACTOR_SUMMARY.md  BEHAVIOR_DEFAULTS_VISUAL_COMPARISON.md  CLAUDE.md  CONFIG_REFACTOR_SUMMARY.md  CONFIG_SYSTEM.md  CONTEXT_MANAGEMENT.md  CONTEXT_SYSTEM_SUMMARY.md  DELEGATION_CONFIG_REFACTOR.md  DOCKER_SECURITY.md  DOCKER_SETUP.md  Dockerfile  EVALUATION_SUITE_README.md  EVAL_SUITE_REPORT.md  EVAL_X10_FAILURE_ANALYSIS.md  EXPERIMENT_RESULTS.md  EXTENDING_BEHAVIORS.md  FAILURE_ANALYSIS.md  FAILURE_DIAGNOSIS.md  FINAL_PERFORMANCE_COMPARISON.md  GAMING_MODELS_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INTEGRATION_ISSUES.md  LLM_WARMUP_FINDINGS.md  MIGRATION_GUIDE.md  MODEL_COMPARISON.md  MULTI_AGENT_ARCHITECTURE.md  NEW_FEATURES_SUMMARY.md  OPTIMIZATION_SUMMARY.md  ORCHESTRATOR_TEST_FINDINGS.md  ORCHESTRATOR_TEST_RESULTS.md  ORCHESTRATOR_WORKSPACE_GUIDE.md  (+102 more)
.agent_context/: history.jsonl  loops.json  state.json
.claude/: settings.local.json
.claude_notes/: repo_organization.md
.devcontainer/: devcontainer.json
analysis/: BASH_HEREDOC_JSON_ERROR.md  COMPLETION_FIX_REPORT.md  COMPREHENSIVE_L5_L7_REPORT.md  CONTEXT_MANAGEMENT_VALIDATION.md  CONTEXT_STRATEGY_COMPARISON.md  CONTEXT_STRATEGY_COMPLETION_SUMMARY.md  CONTEXT_STRATEGY_REFACTORING.md  CONTEXT_STRATEGY_REFACTORING_COMPLETE.md  DESIGN_SPEC_L6_L7_IMPROVEMENTS.md  EVAL_L1_L7_X3_REPORT.md  FULL_BASH_MIGRATION.md  IMPLEMENTED_PARAMETERS.md  JETBOX_NOTES_STRATEGY_INTEGRATION.md  JSON_PARSING_FIX_ANALYSIS.md  JSON_PARSING_FIX_IMPLEMENTATION.md  KWARGS_IMPLEMENTATION.md  L5_L7_FINAL_BENCHMARK_RESULTS.md  L5_L7_POST_FIXES_REGRESSION.md  LLM_TIMEOUT_INVESTIGATION.md  OLLAMA_CONTEXT_WINDOW_FIX.md  QUICK_EVAL_REPORT.md  SESSION_SUMMARY.md  SUBTASK_CONTEXT_ISOLATION_FIX.md  TIMEOUT_INSTRUMENTATION.md  TOKEN_ESTIMATION_FIX.md  TOOL_RESULTS_FIX_SUMMARY.md  all_bugs_fixed.md  analyze_context_log.py  analyze_eval_x10.py  benchmark_summary.md  bug_fix_workspace_root.md  comprehensive_l5_l7_results.json  context_diagnostic.py  context_isolation_diagram.txt  context_leakage_findings.md  context_size_validation_results.json  cross_subtask_context_proposals.md  (+21 more)
archive/misc_dirs/hrm-jepa/: .gitignore  .pre-commit-config.yaml  HRM_JEPA_IMPLEMENTATION_SUMMARY.md  TEXT_ONLY_LLM_UPDATE.md  UNCERTAINTY_SYSTEM.md  environment.yml  pyproject.toml
archive/misc_dirs/hrm-jepa/core/: llm_integration.py  uncertainty.py
archive/misc_dirs/hrm-jepa/core/encoders/: __init__.py  vision_vit.py
archive/misc_dirs/hrm-jepa/core/hrm/: abstract_core.py  hrm_reasoner.py  reflection_loop.py  working_memory.py
archive/misc_dirs/hrm-jepa/data/text/: manifest_20251020_172156.json  synthetic_text_20251020_172156.jsonl
archive/misc_dirs/hrm-jepa/scripts/: compare_hrm_jepa_llm.py  generate_synthetic_text.py  train_jepa.py
archive/misc_dirs/hrm-jepa/tests/unit/: test_encoders.py  test_hrm.py  test_smoke.py
archive/misc_dirs/hrm-jepa/tools/: compact_storage.py
(+567 files in other folders)
